Fix scrolling bug on mobile

--- a/src/stylev2.css
+++ b/src/stylev2.css
@@ -31,6 +31,11 @@
     }
 }
 
+.fc-scroller {
+    overflow: visible !important;
+    height: auto !important;
+}
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
@@ -70,3 +75,4 @@
 #arrow-right {
     @apply no-underline;
 }
+
